sfSandBoxCode/force-app/main/default/objects/Role_Property_Master__c/Role_Property_Master__c.object-meta.xml
<CustomObject>
    <description>Defined list of allowable assets per Sanergy Employee</description>
    <label>Role Property Master</label>
    <nameField>
        <label>Role Property Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Role Property Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>