sfSandBoxCode/force-app/main/default/objects/Role_Property_Master__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <description>Item to be issued</description>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airtime</fullName>
            </value>
            <value>
                <fullName>Apron</fullName>
            </value>
            <value>
                <fullName>Camera - Advanced</fullName>
            </value>
            <value>
                <fullName>Camera - Basic</fullName>
            </value>
            <value>
                <fullName>Clipboard</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Detergent-1 L</fullName>
            </value>
            <value>
                <fullName>Diary</fullName>
            </value>
            <value>
                <fullName>Dust Coat</fullName>
            </value>
            <value>
                <fullName>Ear Muffs</fullName>
            </value>
            <value>
                <fullName>Field Bag</fullName>
            </value>
            <value>
                <fullName>Folder</fullName>
            </value>
            <value>
                <fullName>Gloves pema PVC M16”</fullName>
            </value>
            <value>
                <fullName>Gumboots</fullName>
            </value>
            <value>
                <fullName>Helmet</fullName>
            </value>
            <value>
                <fullName>Laptop - Advanced</fullName>
            </value>
            <value>
                <fullName>Laptop Bag</fullName>
            </value>
            <value>
                <fullName>Laptop - Basic</fullName>
            </value>
            <value>
                <fullName>Laptop - Intermediate</fullName>
            </value>
            <value>
                <fullName>Leather Gloves</fullName>
            </value>
            <value>
                <fullName>Mask</fullName>
            </value>
            <value>
                <fullName>Modem</fullName>
            </value>
            <value>
                <fullName>Overalls</fullName>
            </value>
            <value>
                <fullName>Phone - Basic</fullName>
            </value>
            <value>
                <fullName>Phone - Intermediate</fullName>
            </value>
            <value>
                <fullName>Phone - Smartphone</fullName>
            </value>
            <value>
                <fullName>Raincoat</fullName>
            </value>
            <value>
                <fullName>Respirator</fullName>
            </value>
            <value>
                <fullName>Safety Glasses</fullName>
            </value>
            <value>
                <fullName>Safety Workboots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>