sfSandBoxCode/force-app/main/default/objects/Role_Property_Master__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Employee Asset</fullName>
            </value>
            <value>
                <fullName>Employee Consumable</fullName>
            </value>
            <value>
                <fullName>Team Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>