sfSandBoxCode/force-app/main/default/objects/Role_Property_Master__c/fields/Replacement_Frequency_Months__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Frequency_Months__c</fullName>
    <label>Replacement Frequency (Months)</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>