sfSandBoxCode/force-app/main/default/objects/Role_Property_Master__c/fields/Total_Cost_Per_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Per_Cycle__c</fullName>
    <formula>Unit_Cost__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Per Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>