sfSandBoxCode/force-app/main/default/objects/Role_Property_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Title__c</columns>
    <columns>Item__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Replacement_Frequency_Months__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Total_Cost_Per_Cycle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>